# simulator

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  STREAMLIT_CLOUD.md  bxsim-web.bat  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
app/components/: brand_header.py  charts.py  sidebar.py
configs/: ci_annuity.yaml  ci_annuity_us_eu.yaml  participating.yaml  participating_long.yaml  participating_us_eu.yaml  unified.yaml
data/: live_ci_annuity.csv  live_participating.csv  sample_returns.csv
data/offline/: us_eu_long_annual.csv
data/offline/raw/: components_annual.csv  ftse100_div_yield_annual.csv  ftse100_price_annual.csv
data/offline/regions/: ca_bond.csv  ca_equity.csv  cn_bond.csv  cn_equity.csv  de_bond.csv  de_equity.csv  jp_bond.csv  jp_equity.csv  uk_bond.csv  uk_equity.csv  us_bond.csv  us_equity.csv
scripts/: build_regional_packs.py  extract_avatar.py  update_ftse100_tr.py
src/bxsimulator/: __init__.py  __main__.py  cli.py  config.py  display_format.py  paths.py  profiles.py  web.py
src/bxsimulator/data/: __init__.py  akshare_cn.py  akshare_markets.py  diagnose_history.py  fixtures.py  fred.py  history_sources.py  loader.py  market_prices.py  offline_us_eu.py  regional_blend.py  stooq.py  yahoo.py  yahoo_akshare.py
src/bxsimulator/engine/: __init__.py  backtest.py  smooth.py  state.py
src/bxsimulator/export/: __init__.py  excel.py
tests/: test_engine.py  test_offline_us_eu.py  test_regional_blend.py
